2008-10-06 Raphael Neider <rneider AT web.de>

	* device/include/pic16/stdio.h,
	  device/lib/pic16/libc/stdio/putchar.c: putchar should not be
	  declared __naked for convenience, named all arguments
	* device/lib/pic16/libc/stdio/strmgpsim.c,
	  device/lib/pic16/libc/stdio/strmmssp.c,
	  device/lib/pic16/libc/stdio/strmusart.c: cosmetic changes
	
	* src/pic16/pcode.c (createReachingDefinitions): avoid segfault on
	  empty __naked functions,
	* (pCodeLabelDestruct, pic16_unlinkpCode, pic16_pCodeUnlink): fix
	  corner cases (unlink first/last pCode in list), reuse more code

2008-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/main.c (_ds390_genInitStartup): added
	* src/SDCCpeeph.c (getPatternVar): new, added,
	  (labelInRange): fixed bug 2115959
	* src/mcs51/peeph.def (rules 193.x to 198.x): check for labelInRange
	* src/SDCCicode.h: added newiTempOperand
	* src/SDCCcse.c (algebraicOpts): fixed bug for x*-1,
	  added optimizations for 0/x and x/-1, see also patch 2142900
	* support/regression/tests/onebyte.c (testMul): added test cases

2008-09-20 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c:
	  definition of absolute address symbols without initial value,
	  fixed SDCC crash "do not know how to intialize symbol"

2008-09-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/z80/mul.s (__mulsuchar_rrx_s, __muluschar_rrx_s),
	* device/lib/z80/div.s (__divsuchar_rrx_s, __modsuchar_rrx_s,
	  __divuschar_rrx_s, __moduschar_rrx_s): added mixed signedness versions
	* device/lib/z80/stubs.s: added stubs for above functions
	* src/SDCCopt.c (convilong),
	* src/SDCCsymt.c (initCSupport): fixed bug 1900961
	* src/SDCCsymt.h (__muldiv): enlarged for mixed signedness
	* src/z80/main.c (_hasNativeMulFor): fixed bug, I think
	* support/regression/tests/onebyte.c: enabled all tests for z80

2008-09-15 Borut Razem <borut.razem AT siol.net>

	* device/include/pic16/stdio.h, device/lib/pic16/libc/stdio/streams.c,